--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -75,4 +75,13 @@
         android:layout_alignRight="@+id/remberCheckBox"
         android:text="登录" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/remberCheckBox"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
+
 </RelativeLayout>
